# logical-induction

./: .gitignore  LICENSE.txt  Makefile  README.md  __init__.py  compile.py  credence.py  enumerate_test.py  enumerator.py  enumerator_test.py  formula.py  inductor.py  inductor_test.py  logical_induction_example.py  logical_inductor.py  logical_inductor_test.py  marketmaker.py  marketmaker_test.py  pyproject.toml  requirements.txt  sentence.py  setup.py  trader.py  trader_test.py
.github/workflows/: build_and_test.yaml  integrate.yaml
compile/: compile.py
docs/link/: Atom.html  Conjunction.html  Constant.html  Disjunction.html  Formula.html  History.html  Iff.html  Implication.html  LogicalInductor.html  Max.html  Min.html  Negation.html  Number.html  Price.html  Product.html  SafeReciprocal.html  Sentence.html  SentenceBackend.html  Sum.html  allocations_of.html  apply_budget_transform.html  binary_operator.html  block_name.html  branch_name.html  combine_trading_algorithms.html  comparison_operator.html  compute_budget_factor.html  evaluate.html  find_credences.html  find_the_credences.html  func_name.html  instr_name.html  integer_vectors.html  (+24 more)
example/: choreograph_uniform_pi.py  ignorant_pi.py  two_updates.py  unbudgeted_digits_of_pi.py  uniform_digits_of_pi.py
examples/: choreograph_uniform_pi.py  unbudgeted_digits_of_pi.py  uniform_digits_of_pi.py
logicalinduction/: __init__.py  enumerator.py  enumerator_test.py  formula.py  inductor.py  inductor_test.py  sentence.py  sentence_test.py
notebooks/: three_updates.ipynb
scripts/: generate_links.py
(+2 files in other folders)
